restructre using loader and actions

--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -1,6 +1,8 @@
 main {
+  margin: 0 auto;
   padding: 1rem;
   height: calc(100vh - 6rem);
+  width: min(100%, 900px);
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
@@ -8,4 +10,48 @@ main {
   align-items: center;
   gap: 1rem;
   font-family: var(--main-font);
+}
+
+.modal::backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.7);
+}
+
+.modal {
+  top: 20%;
+  min-width: 30rem;
+  margin: 0 auto;
+  padding: 1rem;
+  z-index: 2;
+  background: #d5c7bc;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  animation: slide-down-fade-in 0.3s ease-out forwards;
+}
+
+@keyframes slide-down-fade-in {
+  from {
+    opacity: 0;
+    transform: translateY(-3rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slide-up-fade-in {
+  from {
+    opacity: 0;
+    transform: translateY(3rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
