--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -88,6 +88,8 @@ html {
 
 body {
   background: var(--background-color);
+  background: var(--background-color) url("Elevation_logo.png") no-repeat fixed
+    center / 90% auto;
   color: var(--text-color);
   font-weight: 400;
   line-height: 1;
